--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
   "author": "owl <dev.bonnard@gmail.com> (https://bonnard-valentin-resume.herokuapp.com/)",
   "license": "MIT",
   "dependencies": {
+    "async": "^2.5.0",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "crypto": "0.0.3",
     "express": "^4.15.3",
     "express-jwt": "^3.4.0",
+    "express-validation": "^0.4.5",
+    "joi": "^7.2.3",
     "jsonwebtoken": "^7.0.1",
     "mongoose": "^4.11.1"
   },
@@ -29,9 +32,23 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
+    "chai": "^3.4.1",
+    "del": "^2.2.0",
     "gulp": "^3.9.1",
+    "gulp-apidoc": "^0.2.6",
     "gulp-babel": "^6.1.2",
+    "gulp-env": "^0.4.0",
     "gulp-load-plugins": "^1.2.0",
-    "gulp-nodemon": "^2.0.6"
+    "gulp-mocha": "^2.2.0",
+    "gulp-nodemon": "^2.0.6",
+    "gulp-plumber": "^1.0.1",
+    "http-status": "^1.0.1",
+    "mocha": "^3.4.2",
+    "run-sequence": "^1.2.2",
+    "sinon": "^1.17.4",
+    "sinon-as-promised": "^3.0.1",
+    "sinon-mongoose": "^1.2.1",
+    "supertest": "^1.1.0",
+    "supertest-as-promised": "^2.0.2"
   }
 }
